--- a/AppProyecto/packages.config
+++ b/AppProyecto/packages.config
@@ -1,8 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Aspose.Words" version="22.6.0" targetFramework="net472" />
+  <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
+  <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net472" />
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net472" />
   <package id="Microsoft.VisualBasic" version="10.3.0" targetFramework="net472" />
+  <package id="MicrosoftOfficeCore" version="15.0.0" targetFramework="net472" />
   <package id="MySqlConnector" version="2.1.9" targetFramework="net472" />
+  <package id="sautinsoft.document" version="5.5.4.14" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
